[package]
name = "my-trx-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }
flurl = { git = "https://github.com/MyJetTools/fl-url", tag = "0.3.0" }


serde = { version = "*", features = ["derive"] }
serde_json = "*"
hex = "*"
sha2 = "*"
bs58 = "*"
